libs/extractor/tests/snapshots/all_tests__vanilla_extract_theme.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"theme.css.ts\",\nr#\"import { createTheme, style } from '@devup-ui/react'\nexport const [themeClass, vars] = createTheme({\n  color: {\n    brand: 'blue',\n    text: 'black'\n  },\n  space: {\n    small: '4px',\n    medium: '8px',\n    large: '16px'\n  }\n})\nexport const box = style({\n  color: vars.color.text,\n  padding: vars.space.medium\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--color-brand-style_0-0",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_themeClass",
                        "theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-text-style_0-1",
                value: "black",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_themeClass",
                        "theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--space-large-style_0-4",
                value: "16px",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_themeClass",
                        "theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--space-medium-style_0-3",
                value: "8px",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_themeClass",
                        "theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--space-small-style_0-2",
                value: "4px",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_themeClass",
                        "theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "var(--color-text-style_0-1)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "var(--space-medium-style_0-3)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const box = \"a b\";\nexport const [themeClass, vars] = [\"f0_themeClass\", {\n\t\"color\": {\n\t\t\"brand\": \"var(--color-brand-style_0-0)\",\n\t\t\"text\": \"var(--color-text-style_0-1)\"\n\t},\n\t\"space\": {\n\t\t\"small\": \"var(--space-small-style_0-2)\",\n\t\t\"medium\": \"var(--space-medium-style_0-3)\",\n\t\t\"large\": \"var(--space-large-style_0-4)\"\n\t}\n}];\n;\n",
}
