libs/extractor/tests/snapshots/all_tests__vanilla_extract_theme_export_variations.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"theme-exports.css.ts\",\nr#\"import { createTheme, createThemeContract, style } from '@devup-ui/react'\nconst contract = createThemeContract({\n  colors: { bg: null, text: null }\n})\nexport const lightTheme = createTheme(contract, {\n  colors: { bg: 'white', text: 'black' }\n})\nconst internalTheme = createTheme(contract, {\n  colors: { bg: 'gray', text: 'darkgray' }\n})\nexport const box = style({ padding: 8 })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--colors-bg",
                value: "gray",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_internalTheme",
                        "theme-exports.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--colors-bg",
                value: "white",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_lightTheme",
                        "theme-exports.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--colors-text",
                value: "black",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_lightTheme",
                        "theme-exports.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--colors-text",
                value: "darkgray",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_internalTheme",
                        "theme-exports.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "32px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const box = \"a\";\nconst internalTheme = \"f0_internalTheme\";\nexport const lightTheme = \"f0_lightTheme\";\n;\n;\n",
}
