libs/extractor/tests/snapshots/all_tests__vanilla_extract_theme_vars_name_only.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"theme-vars-name.css.ts\",\nr#\"import { createTheme } from '@devup-ui/react'\nexport const myTheme = createTheme({\n  color: { primary: 'blue' }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--color-primary-style_0-0",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_myTheme",
                        "theme-vars-name.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const myTheme = \"f0_myTheme\";\n;\n",
}
