libs/extractor/tests/snapshots/all_tests__vanilla_extract_theme_with_vars.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"theme-vars.css.ts\",\nr#\"import { createTheme } from '@devup-ui/react'\nexport const [lightTheme, vars] = createTheme({\n  color: {\n    primary: 'blue',\n    secondary: 'green'\n  },\n  space: {\n    small: '4px',\n    medium: '8px'\n  }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--color-primary-style_0-0",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_lightTheme",
                        "theme-vars.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-secondary-style_0-1",
                value: "green",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_lightTheme",
                        "theme-vars.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--space-medium-style_0-3",
                value: "8px",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_lightTheme",
                        "theme-vars.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--space-small-style_0-2",
                value: "4px",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_lightTheme",
                        "theme-vars.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const [lightTheme, vars] = [\"f0_lightTheme\", {\n\t\"color\": {\n\t\t\"primary\": \"var(--color-primary-style_0-0)\",\n\t\t\"secondary\": \"var(--color-secondary-style_0-1)\"\n\t},\n\t\"space\": {\n\t\t\"small\": \"var(--space-small-style_0-2)\",\n\t\t\"medium\": \"var(--space-medium-style_0-3)\"\n\t}\n}];\n;\n",
}
